Allow clients and generated RSA keys onboarding
